--- a/layout.css
+++ b/layout.css
@@ -1,5 +1,44 @@
 html {
-    <font-size> 62.5% /fonttikoko 10 <px>
-        
-    </font-size>
+    font-size 62.5% /*fonttikoko 10 <px>*/
+}   
+    body {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 1.6rem;
+        padding: 1rem;
+        margin: 1rem;
+         border: 1rem white solid;
+         background-color: #304F4F;
+         color: white;
+
 }
+
+h1, h2, h3, h4, h5, h6, 
+p {
+    margin-block-end: 1rem;
+}
+h1 {font-size: 3rem;
+color: #DDB68A;
+}
+h2 {font-size: 2.8rem;
+color: #2FF82D;}
+
+h3 {font-size: 2.6rem;}
+
+h4 {font-size: 2.4rem;}
+
+h5 {font-size: 2.2rem;}
+
+h6 {font-size: 2rem;}
+
+
+.strong{}
+.italic {}
+.marked {}
+.small {}
+.overlined{}
+.underlined {}
+.subscript {}
+.superscript {}
+
+
+
